# Advent-of-Code

./: .gitignore  .pre-commit-config.yaml  README.md
2016/src/: day01.lua  day02.lua  day03.lua  day04.lua  day05.lua  day06.lua  day07.lua  day08.lua  day09.lua  day10.lua  day11.lua  day12.lua  day13.lua  day14.lua  day15.lua  day16.lua  day17.lua  day18.lua  day19.lua  day20.lua  day21.lua  day22.lua  day23.lua  day24.lua  day25.lua
2017/: CMakeLists.txt  Makefile
2017/src/: day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c
2018/: Cargo.toml
2018/src/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
2019/: .gitignore  CMakeLists.txt  Makefile
2019/src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  intcode.cpp  intcode.h  utils.h
2020/01/: index.js
2020/02/: index.js
2020/03/: index.js
2020/04/: index.js
2020/05/: index.js
2020/06/: index.js
2020/07/: index.js
2020/08/: index.js
2020/src/: day00.js  day01.js  day02.js  day03.js  day04.js  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day14.js  day15.js  day16.js  day17.js  day18.js  day19.js  day20.js  day21.js  day22.js  day23.js  day24.js  day25.js
2021/: .JuliaFormatter.toml  Manifest.toml  Project.toml
2021/01/: example.txt  input.txt  (+1 more)
2023/: .gitignore  .ocamlformat  aoc2023.opam  dune-project
2024/: day01.rb  day02.rb  day03.rb  day04.rb  day05.rb  day06.rb  day07.rb  day08.rb  day09.rb  day10.rb  day11.rb  day12.rb  day13.rb  day14.rb  day15.rb  day16.rb  day17.rb  day18.rb  day19.rb  day20.rb  day21.rb  day22.rb  day23.rb  day24.rb  day25.rb  priority_queue.rb
2025/: day01.java  day02.java  day03.java  day04.java  day05.java  day06.java  day07.java  day08.java  day09.java  day10.java  day11.java  day12.java
(+151 files in other folders)
