cmake_minimum_required(VERSION 3.22.1)
project(AoC-2017 C)

add_compile_options(-Wall -Wextra -Wpedantic)

add_executable(day01 src/day01.c)
add_executable(day02 src/day02.c)
add_executable(day03 src/day03.c)
add_executable(day04 src/day04.c)
add_executable(day05 src/day05.c)
add_executable(day06 src/day06.c)
add_executable(day07 src/day07.c)
add_executable(day08 src/day08.c)
add_executable(day09 src/day09.c)
add_executable(day10 src/day10.c)
