[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_lib"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
