cmake_minimum_required(VERSION 3.27.7)
project(AoC-2019 LANGUAGES CXX)

add_compile_options(-Wall -Wextra -Wpedantic)

add_executable(day01 src/day01.cpp)
add_executable(day02 src/day02.cpp)
add_executable(day03 src/day03.cpp)
add_executable(day04 src/day04.cpp)
add_executable(day05 src/day05.cpp)
add_executable(day06 src/day06.cpp)
add_executable(day07 src/day07.cpp)
add_executable(day08 src/day08.cpp)
add_executable(day09 src/day09.cpp)
add_executable(day10 src/day10.cpp)
add_executable(day11 src/day11.cpp)
add_executable(day12 src/day12.cpp)
add_executable(day13 src/day13.cpp)
add_executable(day14 src/day14.cpp)
add_executable(day15 src/day15.cpp)
add_executable(day16 src/day16.cpp)
add_executable(day17 src/day17.cpp src/intcode.cpp)
add_executable(day18 src/day18.cpp)
add_executable(day19 src/day19.cpp src/intcode.cpp)
add_executable(day20 src/day20.cpp)
add_executable(day21 src/day21.cpp src/intcode.cpp)
add_executable(day22 src/day22.cpp)
add_executable(day23 src/day23.cpp src/intcode.cpp)
# add_executable(day24 src/day24.cpp)
# add_executable(day25 src/day25.cpp)
